Bug 153045 - FILEOPEN: DOCX: incorrect height of row in table
Summary: FILEOPEN: DOCX: incorrect height of row in table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Tables layoutInCell
  Show dependency treegraph
 
Reported: 2023-01-16 12:35 UTC by Xisco Faulí
Modified: 2024-08-27 15:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion MSO vs LibreOffice 7.6 master (110.39 KB, image/png)
2023-01-16 12:35 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-01-16 12:35:51 UTC
Created attachment 184684 [details]
Comparsion MSO vs LibreOffice 7.6 master

Steps to reproduce:
1. Open attachment 70354 [details] from bug 57360

-> second row has incorrect height. See comparison

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b9411e587586750f36ba9009b5f1e29fe461d8b5
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: de-DE (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-01-16 12:36:46 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2022-11-29 21:20:50 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2022-11-30 08:10:15 +0100
commit 1d9221ebc86f2696a65c12287ea19eea44d680cf (patch)
tree aca6f6ffae28c5b0ea8b807cb90c5b01c33280b0
parent dda4867a0b5a2d29d8a01a3656e0c8dac7626d2f (diff)
tdf#124601 sw: fix misplaced images in table cells

Bisected with: bibisect-linux64-7.5

Adding Cc: to Miklos Vajna
Comment 2 Xisco Faulí 2023-01-16 14:47:34 UTC
Also reproduced with attachment 75905 [details] from bug 61804
Comment 3 jindam, vani 2023-01-16 16:30:39 UTC
repro on android viewer [fdroid version]
Version: 7.6.0.0.alpha0+
Build ID: d6c54b3d4ee7
Comment 4 Commit Notification 2023-01-19 07:15:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6819b7eb6ca5187b82833965c8198f3ca868b27a

tdf#153045 sw: fix incorrect height of row in table

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2023-01-19 08:53:01 UTC
Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 17c68fad2aef917adfdd3d4d651da786e620699c
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: de-DE (es_ES.UTF-8); UI: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 6 Commit Notification 2023-01-19 12:24:32 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/29b25f012cf799d8e352d3b8dd890a642b35fef8

tdf#153045 sw: fix incorrect height of row in table

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.