tdf#153045 sw: fix incorrect height of row in table

The bugdoc DOCX had a shape anchored in a table cell, and the cell had
large enough height so the shape could fit into the cell, while the
expected cell height was independent (smaller) from the shape.

The problem is around the follow-text-flow feature, which is called
"keep inside cell boundaries" in Word. This setting would normally
increase the size of the cell, so the shape remains inside the cell. An
exception from this increase request is the wrap-through wrap mode,
which leaves the cell size unchanged.

Fix the problem by considering two previous use-cases:
1d9221ebc86f2696a65c12287ea19eea44d680cf (tdf#145688 sw: fix misplaced
images in table cells, 2022-11-29) and
489eef894e7034873ad262f9dfca554022db1b09 (tdf#124601 sw FollowTextFlow:
fix vert pos of objects outside the current cell, 2019-10-01):

- tdf#145688 is a legacy ODF document: do require the the "in
  background" wrapping, otherwise make the cells big

- tdf#124601 & tdf#153045 are Word documents: here don't require the "in
  background" wrapping and go with small cells when the wrap type is
  through

This requires adjusting the tdf#145688 testcase that minimized the
original bugdoc incorrectly.

Change-Id: Ieaf3d9c1c4477e5e57e5e1e825775648840ab32b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145756
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 6819b7eb6ca5187b82833965c8198f3ca868b27a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145727
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>